--- a/source/blender/blenlib/CMakeLists.txt
+++ b/source/blender/blenlib/CMakeLists.txt
@@ -27,6 +27,7 @@ set(INC
 	.
 	../blenkernel
 	../blenloader
+	../bmesh
 	../gpu
 	../makesdna
 	../../../intern/ghost
@@ -78,6 +79,7 @@ set(SRC
 	intern/noise.c
 	intern/path_util.c
 	intern/pbvh.c
+	intern/pbvh_bmesh.c
 	intern/rand.c
 	intern/rct.c
 	intern/scanfill.c
