Import the RangeTree library into intern
RangeTree is a simple C++ tree set for storing non-overlapping scalar
ranges. Original source from:
https://github.com/nicholasbishop/RangeTree

Also update the build systems to include RangeTree.

--- a/intern/SConscript
+++ b/intern/SConscript
@@ -15,7 +15,8 @@ SConscript(['audaspace/SConscript',
             'opennl/SConscript',
             'mikktspace/SConscript',
             'smoke/SConscript',
-            'raskter/SConscript'])
+            'raskter/SConscript',
+            'rangetree/SConscript'])
 
 if env ['WITH_BF_REMESH']:
     SConscript(['dualcon/SConscript'])
